--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ header {
 
 .main-text {
   padding: 30px;
+  margin-bottom: 100px;
 }
 
 .square {
@@ -172,13 +173,14 @@ header {
   position: relative;
   width: 50%;
   height: 350px;
+  display: block;
+  margin-bottom: 100px;
 }
 
 .cube {
   position: absolute;
   width: 80px;
   height: 80px;
-  /* background-color: rgb(162, 0, 145); */
   transform: rotate(-25deg skew(25deg));
 }
 
@@ -205,17 +207,71 @@ header {
 }
 
 #html {
-  background-image: url("https://bit.ly/2WqV0LB");
+  left: 100px;
+  bottom: 80px;
+  background-image: url("https://cutt.ly/zTm6UWW");
   background-size: cover;
-  box-shadow: rgb(57, 57, 57);
-  background-color: rgb(209, 117, 200);
+  background-color: rgb(175, 119, 227);
+  box-shadow: -60px 60px 20px rgb(50 50 50/ 15%);
+}
+
+#html:before {
+  background-color: rgb(189, 154, 221);
+}
+
+#html:after {
+  background-color: rgb(205, 188, 221);
 }
 
 #css {
-  background-image: url("https://bit.ly/2WqV0LB");
+  left: 250px;
+  bottom: 240px;
+  background-image: url("images/css-square.png");
   background-size: cover;
-  box-shadow: rgb(57, 57, 57);
-  background-color: rgb(209, 117, 200);
+  background-color: rgb(227, 119, 191);
+  box-shadow: -100px 100px 20px rgb(50 50 50/ 15%);
+}
+
+#css:before {
+  background-color: rgb(221, 154, 207);
+}
+
+#css:after {
+  background-color: rgb(221, 188, 211);
+}
+
+#javascript {
+  left: 450px;
+  bottom: 200px;
+  background-image: url("images/javascript-square.png");
+  background-size: cover;
+  background-color: rgb(119, 227, 186);
+  box-shadow: -40px 40px 20px rgb(50 50 50/ 15%);
+}
+
+#javascript:before {
+  background-color: rgb(154, 221, 202);
+}
+
+#javascript:after {
+  background-color: rgb(188, 221, 212);
+}
+
+#react {
+  left: 350px;
+  bottom: 40px;
+  background-image: url("images/react-square.png");
+  background-size: cover;
+  background-color: rgb(119, 193, 227);
+  box-shadow: -80px 80px 20px rgb(50 50 50/ 15%);
+}
+
+#react:before {
+  background-color: rgb(154, 189, 221);
+}
+
+#react:after {
+  background-color: rgb(188, 200, 221);
 }
 
 footer {
@@ -237,5 +293,11 @@ footer {
     width: 48%;
     margin: 1%;
     height: 600px;
+  }
+}
+
+@media only screen and (max-width: 1300px) {
+  .hero-image {
+    display: none;
   }
 }
